// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserMenu > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="user-menu"
  id="modified-unique-id"
>
  <amelipro-icon-btn-stub
    badge="false"
    bordered="false"
    btnlabel="infos utilisateur"
    icon="plus"
    iconbgcolor="ap-blue-darken-1"
    iconcolor="ap-white"
    iconhoverbgcolor="ap-blue-darken-2"
    iconhovercolor="ap-white"
    large="false"
    medium="false"
    size="2rem"
    small="false"
    uniqueid="modified-unique-id-open-btn"
    xlarge="false"
  ></amelipro-icon-btn-stub>
  <v-menu-stub
    activator="modified-unique-id-open-btn"
    activatorprops="[object Object]"
    attach="#modified-unique-id"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    locationstrategy="connected"
    maxwidth="366px"
    minwidth="366px"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    scrim="false"
    scrollstrategy="reposition"
    submenu="false"
    transition="slide-y-transition"
    width="366px"
    zindex="2000"
  ></v-menu-stub>
</div>
`;

exports[`UserMenu > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="user-menu"
  id="required-unique-id"
>
  <amelipro-icon-btn-stub
    badge="false"
    bordered="false"
    btnlabel="infos utilisateur"
    icon="utilisateur"
    iconbgcolor="ap-blue-darken-1"
    iconcolor="ap-white"
    iconhoverbgcolor="ap-blue-darken-2"
    iconhovercolor="ap-white"
    large="false"
    medium="false"
    size="2rem"
    small="false"
    uniqueid="required-unique-id-open-btn"
    xlarge="false"
  ></amelipro-icon-btn-stub>
  <v-menu-stub
    activator="required-unique-id-open-btn"
    activatorprops="[object Object]"
    attach="#required-unique-id"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    locationstrategy="connected"
    maxwidth="366px"
    minwidth="366px"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    scrim="false"
    scrollstrategy="reposition"
    submenu="false"
    transition="slide-y-transition"
    width="366px"
    zindex="2000"
  ></v-menu-stub>
</div>
`;

exports[`UserMenu > render correctly 1`] = `
<div
  class="user-menu"
  id="user-information-summary-id"
  usermenuinfos="[object Object]"
>
  <button
    class="
      btn--icon
      elevation-0
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--icon
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    id="user-information-summary-id-open-btn"
    plain=""
    style="height: auto; width: auto;"
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span
        class="d-sr-only"
        id="user-information-summary-id-open-btn-btn-label"
      >
        infos utilisateur
      </span>
      <span
        class="
          amelipro-icon
          icon-custom
        "
        id="user-information-summary-id-open-btn-icon"
      >
        <span
          aria-hidden="true"
          class="
            amelipro-custom-icon
            custom-color
          "
          focusable="false"
          role="img"
          style="color: #FFFFFF; height: 2rem; width: 2rem;"
        >
          <span>
            <svg
              aria-hidden="true"
              clip-rule="evenodd"
              fill-rule="evenodd"
              height="34"
              image-rendering="optimizeQuality"
              shape-rendering="geometricPrecision"
              text-rendering="geometricPrecision"
              viewBox="0 0 1823 1823"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="circle-color"
                cx="912"
                cy="912"
                r="912"
              />
              <path
                class="shape-color"
                d="M962 454c117 0 125 154 125 154v145s1 111-73 152c-2 10-3 20-1 30 4-2-21 146 106 165 92 15 178 57 247 120 23 23 40 186 40 186H418s-2-132 40-186c73-62 162-104 257-120 128-19 85-160 89-158 2-10 1-21-1-31 0 0-69-89-68-169 1-81 0-134 0-134s-4-190 126-190l101 36z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
  <!---->
</div>
`;
